コマンドの間違いを修正

--- a/articles/6ce88d49f5485a.md
+++ b/articles/6ce88d49f5485a.md
@@ -48,7 +48,7 @@ sheldon init --shell zsh
 ```
 `~/.zshrc`に以下を追記し、.zshrcが読み込まれた時にsheldonが起動するようにします。
 ```bash
-eval "(sheldon source)"
+eval "$(sheldon source)"
 ```
 
 ### 3. Powerlevel10kのインストール
